Bug 1730537 - Downgrade a debug assertion in MRPIS code to non-fatal because it's too frequent locally. r=alwu

Differential Revision: https://phabricator.services.mozilla.com/D145964